config/gateway-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver
spec:
  parentRefs:
  - name: echoserver
  hostnames:
  - echoserver.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    - path:
        type: PathPrefix
        value: /healthz
    - path:
        type: PathPrefix
        value: /status
    backendRefs:
    - name: echoserver
      port: 80
